# room-sandbox

./: .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
src/: config.rs  docker.rs  main.rs  state.rs
src/commands/: agent.rs  apply.rs  claude.rs  clean.rs  down.rs  init.rs  logs.rs  mod.rs  shell.rs  tui.rs  up.rs  upgrade.rs
