[package]
name = "room-sandbox"
version = "0.1.0"
edition = "2024"
description = "Dockerized multi-agent sandbox for room"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
inquire = "0.7"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
